# devinci-portal

./: docker-compose.yaml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  db.py  main.py
backend/src/auth/: auth.py  deps.py  token.py
backend/src/controllers/: admin.py  auth.py  forum.py  team.py  user.py
backend/src/db/: base.py  init.py
backend/src/entities/: __init__.py  base.py  cleaning.py  cleaning_duties.py  forum.py  forum_event.py  forum_idea.py  forum_settings.py  message.py  role.py  team.py  team_link.py  user.py  user_event.py  user_role.py  user_update.py
backend/src/entities/forum/: forum_event.py  forum_idea.py  forum_settings.py
backend/src/entities/team/: team.py  team_link.py
backend/src/entities/user/: message.py  role.py  user.py  user_event.py  user_role.py
backend/src/routers/: admin.py  admin_inputs.py  auth.py  cleaning.py  cleaning_duties.py  forum.py  forum_event.py  forum_idea.py  forum_results.py  forum_settings.py  main.py  main_results.py  message.py  resultModels.py  role.py  system_error.py  team.py  team_link.py  user.py  user_event.py  user_role.py  user_update.py
backend/src/services/: actions.py  admin.py  auth.py  common_actions.py  forum.py  unique_actions.py
backend/src/team/: team.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  LoginPage.tsx  global.css  main.tsx
frontend/src/api/: admin.ts  auth.ts  forum.ts  http.ts  user.ts  utils.ts
frontend/src/pages/: ForumPage.tsx  MainPage.tsx
(+36 files in other folders)
